# platform.upstream.xkeyboard-config

./: .gbs.conf  Makefile.am  autogen.sh  configure.ac  make_keycodes.sh  make_symbols.sh  project.config  remove_symbols.sh  remove_unused_files.sh  xkb-data.manifest  xkeyboard-config-2.11.tar.bz2.delta  xkeyboard-config-2.11.tar.gz.delta  xkeyboard-config-2.11.tar.gz.id  xkeyboard-config-2.7.tar.bz2.delta  xkeyboard-config-2.7.tar.bz2.id  xkeyboard-config.lang  xkeyboard-config.manifest
cache/: Makefile.am  cache.c
compat/: Makefile.am
keycodes/: Makefile.am  Makefile.in  evdev
packaging/: xkeyboard-config.lang  xkeyboard-config.spec
symbols/: Makefile.am  inet
types/: Makefile.am
